<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tablecell1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/date"
            android:layout_width="@dimen/table_column"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/date"
            android:textSize="@dimen/table_text" />

        <TextView
            android:id="@+id/c0"
            android:layout_width="@dimen/table_column"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/t_total"
            android:textSize="@dimen/table_text" />

        <TextView
            android:id="@+id/c1"
            android:layout_width="@dimen/table_column"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/t_a17"
            android:textSize="@dimen/table_text" />

        <TextView
            android:id="@+id/c2"
            android:layout_width="@dimen/table_column"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/t_o60"
            android:textSize="@dimen/table_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/c345"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/t_dis"
                android:textSize="@dimen/table_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/c3"
                    android:layout_width="@dimen/table_column"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/t_total"
                    android:textSize="@dimen/table_text" />

                <TextView
                    android:id="@+id/c4"
                    android:layout_width="@dimen/table_column"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/t_a17"
                    android:textSize="@dimen/table_text" />

                <TextView
                    android:id="@+id/c5"
                    android:layout_width="@dimen/table_column"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/t_o60"
                    android:textSize="@dimen/table_text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/c8910"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/t_ih"
                android:textSize="@dimen/table_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/c8"
                    android:layout_width="@dimen/table_column"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/t_total"
                    android:textSize="@dimen/table_text" />

                <TextView
                    android:id="@+id/c9"
                    android:layout_width="@dimen/table_column"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/t_a17"
                    android:textSize="@dimen/table_text" />

                <TextView
                    android:id="@+id/c10"
                    android:layout_width="@dimen/table_column"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:padding="0dp"
                    android:text="@string/t_o60"
                    android:textSize="@dimen/table_text" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/TraumaList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
